manifests/wordpress/mariadb.yaml
# This manifest assumes 'wordpress' namespace is already present:
#
#   kubectl create namespace wordpress
#
# Apply the manifest with:
#
#   kubectl apply -f mariadb.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: wordpress

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-mariadb
  namespace: wordpress
  labels:
    app: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
      tier: mariadb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
        tier: mariadb
    spec:
      containers:
        - image: mariadb:10.9.2
          imagePullPolicy: IfNotPresent
          name: mariadb
          ports:
            - containerPort: 3306
              name: mariadb
          volumeMounts:
            - name: mariadb-persistent-storage
              mountPath: /var/lib/mysql
          resources:
            limits:
              cpu: '1'
              memory: '512Mi'
            requests:
              cpu: '500m'
              memory: '256Mi'
      volumes:
        - name: mariadb-persistent-storage
          persistentVolumeClaim:
            claimName: mariadb-pv-claim

---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-mariadb
  namespace: wordpress
  labels:
    app: wordpress
spec:
  ports:
  - port: 3306
    targetPort: 3306
    protocol: TCP
  selector:
    app: wordpress
    tier: mariadb
  type: ClusterIP
